--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ fastapi==0.104.1
 uvicorn==0.24.0
 pydantic==2.5.0
 python-multipart==0.0.6
+gunicorn==21.2.0
 
 # Database
 sqlalchemy==2.0.23
@@ -28,12 +29,6 @@ pymeeus==0.5.11
 # API & HTTP
 httpx==0.25.1
 requests==2.31.0
-
-# Testing
-pytest==7.4.3
-pytest-cov==4.1.0
-pytest-asyncio==0.21.1
-pytest-timeout==2.2.0
 
 # Utilities
 python-json-logger==2.0.7
