--- a/requirements.txt
+++ b/requirements.txt
@@ -19,7 +19,7 @@ PyJWT==2.10.1
 # Astrology Calculations
 pymeeus==0.5.11
 pytz==2024.1
-swisseph>=2.10
+pyswisseph>=2.10
 
 # API & HTTP
 httpx==0.25.1
