Add email-validator dependency for Pydantic EmailStr validation

--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ python-jose==3.3.0
 passlib==1.7.4
 bcrypt==4.1.1
 PyJWT==2.10.1
+email-validator==2.1.0
 
 # Astrology Calculations
 pymeeus==0.5.11
