--- a/requirements.txt
+++ b/requirements.txt
@@ -28,3 +28,10 @@ requests==2.31.0
 
 # Utilities
 python-json-logger==2.0.7
+
+# ML Dependencies (optional, required for ML prediction endpoints)
+joblib>=1.3.0
+xgboost>=2.0.0
+scikit-learn>=1.3.0
+numpy>=1.24.0
+pandas>=2.0.0
