--- a/requirements.txt
+++ b/requirements.txt
@@ -3,11 +3,9 @@ fastapi==0.109.0
 uvicorn==0.27.0
 pydantic==2.7.1
 python-multipart==0.0.6
-gunicorn==21.2.0
 
 # Database
-sqlalchemy==2.0.23
-psycopg2-binary==2.9.9
+pymongo>=4.0.0
 python-dotenv==1.0.0
 
 # Authentication & Security
