--- a/.gitignore
+++ b/.gitignore
@@ -100,17 +100,14 @@ node_modules/
 *.mp3
 *.mp4
 
-# Project specific
-client/
+# Large binary ML models only (keep code)
+trained_models/*.pkl
+trained_models/*.joblib
+trained_models/*.h5
+trained_models/*.pt
+trained_models/*.pth
 
-# Documentation & Guides (not part of deployment)
-*.md
-*.txt
-!README.md
-!.gitignore
-docs/
-
-# Test files (local testing only)
-test_*.py
-integration_tests.py
-*_test.py
+# Temporary documentation (keep important docs)
+TEMP_*.md
+*_BACKUP.md
+*_OLD.md
