--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -30,6 +30,6 @@ python-json-logger==2.0.7
 # ML Dependencies (optional, required for ML prediction endpoints)
 joblib>=1.3.0
 xgboost>=2.0.0
-scikit-learn>=1.3.0
+scikit-learn==1.3.2
 numpy>=1.24.0
 pandas>=2.0.0
